welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:4: error: not found: value nbCase
  nbCase = nbCase + 1 ;
  ^Program:10: error: not found: value nbCase
for (c <- 1 to nbCase) {
               ^