welcome.lessons.welcome.loopfor.LoopFor.scala.code
var nbcase:Int = 0

while(!estSurBiscuit()){
  nbCase = nbCase + 1 ;
  avance();
}

prendBiscuit()

for (c <- 1 to nbCase) {
  recule();
}

poseBiscuit()